# ComfyUI-GaussianPack

./: README.md  __init__.py  index.html  prestartup_script.py  pyproject.toml
dev/: index.html
dev/linux-cpu/: index.html  results.json
dev/linux-cpu/logs/: merge_splats_resources.csv
dev/linux-cpu/videos/merge_splats/: metadata.json
dev/macos-cpu/: index.html  results.json
dev/macos-cpu/logs/: merge_splats_resources.csv
dev/macos-cpu/videos/merge_splats/: metadata.json
dev/windows-cpu/: index.html  results.json
dev/windows-cpu/logs/: merge_splats_resources.csv
dev/windows-cpu/videos/merge_splats/: metadata.json
dev/windows-portable-cpu/: index.html  models.json  results.json
dev/windows-portable-cpu/logs/: merge_splats_resources.csv
dev/windows-portable-cpu/videos/merge_splats/: metadata.json
nodes/: __init__.py  _sh_rotation.py  comfy-env.toml  preview_gaussian_camera.py  preview_gaussian_spectate.py  transform_gaussian.py
web/: viewer_gaussian.html
web/js/: gaussian_preview.js
